--- a/styles.css
+++ b/styles.css
@@ -77,10 +77,9 @@ button{
     background-color: #FFFFFF;
 }
 .rainbow{
-    background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet, red);
+    background: linear-gradient(90deg, red, orange, yellow, green, blue, rgb(170, 170, 170), violet, red);
     
 }
-
 
 .selected{
     box-shadow: 2px 2px 8px 4px black;
